--- a/movie_index.html
+++ b/movie_index.html
@@ -16,6 +16,8 @@
 
     <body>
         <!-- bootstrap navbar -->
+        <!--header-->
+        
         <nav class="navbar navbar-expand-sm mynavbar navbar-light ">
             <a class="navbar-brand" href="#"><svg class="logo" width="238" height="47" viewBox="0 0 238 47" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -55,6 +57,7 @@
                 </ul>
             </div>
         </nav>
+    
         <div class="flex-container all">
             <!--電影-->
             <div class="title2">
