調整分類頁的 CSS 與 HTML

--- a/movie_index.html
+++ b/movie_index.html
@@ -17,7 +17,6 @@
     <body>
         <!-- bootstrap navbar -->
         <!--header-->
-        
         <nav class="navbar navbar-expand-sm mynavbar navbar-light ">
             <a class="navbar-brand" href="#"><svg class="logo" width="238" height="47" viewBox="0 0 238 47" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -57,39 +56,66 @@
                 </ul>
             </div>
         </nav>
-    
-        <div class="flex-container all">
-            <!--電影-->
-            <div class="title2">
-                <img src="/Users/jasmine/Desktop/新聞網站架設＿HTML/final project/icons/cinema.svg">
-                <div class="font">
 
-                    <span>
-                        電影
-                    </span>
+        <!-- 網頁內容 -->
+        <div style="margin-top: 130px;">
+            <div class="flex-container all">
+                <!--電影-->
+                <div class="title2">
+                    <img src="/Users/jasmine/Desktop/新聞網站架設＿HTML/final project/icons/cinema.svg">
+                    <div class="font">
 
-                </div>
-                <div class="bottom">
-                </div>
-            </div>
-            <div class="articlecover">
-                <!--世界上最爛的人-->
-                <div class="articleframe">
+                        <span>
+                            電影
+                        </span>
 
-                    <div class="articleframepic">
-                        <a href="#">
-                            <img src="./movie/WPITW.jpeg">
-                        </a>
                     </div>
-                    <div class="articleframetitle">
-                        <a href="#">
-                            當失去和擁有同樣困難：《世界上最爛的人》裡的女性困局</a>
+                    <div class="bottom">
+                    </div>
+                </div>
+                <div class="articlecover">
+                    <!--世界上最爛的人-->
+                    <div class="articleframe">
 
-                        </p>
+                        <div class="articleframepic">
+                            <a href="#">
+                                <img src="./movie/WPITW.jpeg">
+                            </a>
+                        </div>
+                        <div class="articleframetitle">
+                            <a href="#">
+                                當失去和擁有同樣困難：《世界上最爛的人》裡的女性困局</a>
+
+                            </p>
+                        </div>
+                        <div class="articleframeauthor">
+                            <p>
+                                林子芸
+                            </p>
+                        </div>
+                        <div class="articleframedate">
+                            <p>
+                                2022.05.28
+                            </p>
+                        </div>
+                    </div>
+                    <!--雲端情人-->
+                    <div class="articleframe">
+
+                        <div class="articleframepic">
+                            <a href="#">
+                                <img src="./movie/her.jpeg"></a>
+                        </div>
+                        <a href="#">
+                            <div class="articleframetitle">
+                                <p>
+                                    從雲端情人看愛「人」的勇氣
+                                </p>
+                        </a>
                     </div>
                     <div class="articleframeauthor">
                         <p>
-                            林子芸
+                            郭芷毓
                         </p>
                     </div>
                     <div class="articleframedate">
@@ -98,17 +124,18 @@
                         </p>
                     </div>
                 </div>
-                <!--雲端情人-->
+
+                <!--He's not that into you-->
                 <div class="articleframe">
 
                     <div class="articleframepic">
                         <a href="#">
-                            <img src="./movie/her.jpeg"></a>
+                            <img src="./movie/He's just not that into you.webp"></a>
                     </div>
                     <a href="#">
                         <div class="articleframetitle">
                             <p>
-                                從雲端情人看愛「人」的勇氣
+                                如何下船？暈船者的必讀指南—分析《他其實沒那麼喜歡你》的經典對白
                             </p>
                     </a>
                 </div>
@@ -123,24 +150,23 @@
                     </p>
                 </div>
             </div>
-
-            <!--He's not that into you-->
+            <!--奇蹟男孩-->
             <div class="articleframe">
 
                 <div class="articleframepic">
                     <a href="#">
-                        <img src="./movie/He's just not that into you.webp"></a>
+                        <img src="./movie/w1.jpg"></a>
                 </div>
                 <a href="#">
                     <div class="articleframetitle">
                         <p>
-                            如何下船？暈船者的必讀指南—分析《他其實沒那麼喜歡你》的經典對白
+                            奇蹟男孩靠的不是奇蹟 是努力和身邊的善意
                         </p>
                 </a>
             </div>
             <div class="articleframeauthor">
                 <p>
-                    郭芷毓
+                    徐仙紋
                 </p>
             </div>
             <div class="articleframedate">
@@ -148,31 +174,6 @@
                     2022.05.28
                 </p>
             </div>
-        </div>
-        <!--奇蹟男孩-->
-        <div class="articleframe">
-
-            <div class="articleframepic">
-                <a href="#">
-                    <img src="./movie/w1.jpg"></a>
-            </div>
-            <a href="#">
-                <div class="articleframetitle">
-                    <p>
-                        奇蹟男孩靠的不是奇蹟 是努力和身邊的善意
-                    </p>
-            </a>
-        </div>
-        <div class="articleframeauthor">
-            <p>
-                徐仙紋
-            </p>
-        </div>
-        <div class="articleframedate">
-            <p>
-                2022.05.28
-            </p>
-        </div>
         </div>
         <!--Glass異裂-->
         <div class="articleframe">
@@ -301,6 +302,8 @@
                     2022.05.28
                 </p>
             </div>
+        </div>
+
         </div>
 
         </div>
